--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,4 +1,34 @@
 <div class="page-header">
   <h1>Profile</h1>
 </div>
-<p>This is the profile view.</p>
+<form action="">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <label>Username</label>
+        <input type="text" class="form-control" value="brunobatista" disabled>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label>Email</label>
+        <input type="email" class="form-control" value="bruno.batista@ctis.com.br">
+      </div>
+    </div>
+  </div>
+  <h4>Change Password</h4>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="well well-sm">
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Repeat Password</label>
+          <input type="password" class="form-control">
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
